<resources>
    <string name="app_name">Daily Planner</string>
    <string name="daily_planner">DAILY PLANNER</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="full_name">FULL NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="register">REGISTER</string>
    <!--    <string name="register">REGISTER</string>-->
    <string name="already_registered_login">Already Registered? Login.</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="login">LOGIN</string>
    <string name="not_registered_register">Not Registered? Register.</string>
    <string name="logout">LOGOUT</string>
</resources>